@@ -1,13 +1,13 @@
 package me.mrCookieSlime.CSCoreLibPlugin.java;
 
-import javax.xml.bind.DatatypeConverter;
+import java.util.Base64;
 
 public class Converter {
 	
 	public static String encode(EncodingType type, String string) {
 		switch (type) {
 		case BASE64: {
-			return DatatypeConverter.printBase64Binary(string.getBytes());
+			return Base64.getEncoder().encodeToString(string.getBytes());
 		}
 		case BINARY: {
 			StringBuilder binary = new StringBuilder();
@@ -29,7 +29,7 @@ public class Converter {
 	public static String decode(EncodingType type, String string) {
 		switch (type) {
 		case BASE64: {
-			return new String(DatatypeConverter.parseBase64Binary(string));
+			return new String(Base64.getDecoder().decode(string));
 		}
 		case BINARY: {
 			StringBuilder text = new StringBuilder();
